# bubbles-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  debug_pagination  debug_pagination.rs  test_pagination_fix  test_pagination_fix.rs
.github/workflows/: ci.yml  release.yml
docs/: API.md
examples/: list.rs  progress.rs  spinner.rs  textinput.rs
examples/filepicker/: Cargo.toml
examples/list-default/: Cargo.toml  main.rs
src/: cursor.rs  filepicker.rs  help.rs  key.rs  lib.rs  list.rs  paginator.rs  progress.rs  runeutil.rs  spinner.rs  stopwatch.rs  table.rs  textinput.rs  timer.rs  viewport.rs
src/list/: api.rs  defaultitem.rs  filtering.rs  keys.rs  mod.rs  model.rs  model.rs.bak  rendering.rs  style.rs  types.rs
src/textarea/: helpers.rs  memoization.rs  mod.rs  tests.rs
src/textinput/: keymap.rs  methods.rs  mod.rs  model.rs  movement.rs  suggestions.rs  tests.rs  types.rs  view.rs
