[package]
name = "bubbletea-widgets"
version = "0.0.8"
edition = "2021"
description = "A collection of reusable TUI components for building terminal applications with bubbletea-rs"
license = "MIT"
repository = "https://github.com/whit3rabbit/bubbles-rs"
keywords = ["tui", "terminal", "bubbletea", "components", "ui"]
categories = ["command-line-utilities", "gui"]
authors = ["Whit3rabbit <whiterabbit@protonmail.com>"]

[lib]
name = "bubbletea_widgets"
path = "src/lib.rs"

[package.metadata.docs.rs]
# Disable clipboard feature for docs.rs builds to avoid xcb dependency issues
features = []
no-default-features = true

[dependencies]
bubbletea-rs = "0.0.6"
lipgloss = "0.0.7"
lipgloss-table = "0.0.7"
lipgloss-list = "0.0.7"
crossterm = "0.29"
unicode-width = "0.2"
fuzzy-matcher = "0.3.7"
clipboard = { version = "0.5", optional = true }
once_cell = "1.19"
unicode-segmentation = "1.11"
strip-ansi-escapes = "0.2"

[features]
default = ["clipboard-support"]
clipboard-support = ["clipboard"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }